couple of fixes to the autocomplete and search button spacing

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -945,8 +945,10 @@ ul.ui-widget {
   font-size: 1em;
 }
 
-ul.ui-autocomplete, #search_hint {
+ul.ui-autocomplete {
   font-family: Arial, sans-serif;
+  border: solid 1px #8F8F8F;
+  background: #fff;
 }
 
 ul.ui-autocomplete li, #search_hint {
@@ -960,13 +962,12 @@ ul.ui-autocomplete li, #search_hint {
   margin:0 0 0 0.4em;
 }
 
-ul.ui-autocomplete.ui-menu .ui-menu-item a, #search_hint p {
+ul.ui-autocomplete.ui-menu .ui-menu-item a {
   padding: 0.625em;
   font-size: 1.25em;
   line-height: 1em;
   text-shadow: 0 2px 0 #ffffff;
 }
-
 
 ul.ui-autocomplete li a em {
   padding: 0.125em;
@@ -1000,9 +1001,9 @@ ul.ui-autocomplete.ui-menu .ui-menu-item.search-site em {
 }
 
 ul.ui-corner-all, ul li a.ui-corner-all {
-    border-radius: 0;
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  border-radius: 0;
 }
 
 .hidden {
