--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -56,7 +56,7 @@
 }
 
 #homepage-search input[type="submit"] {
-  padding: 0.25em 0.91em;
+  padding: 0 0.91em;
   line-height: 1.73em;
   text-shadow: 0 2px 0 #fff;
   border: solid 1px #CCCCCC;
